# LibXLL

./: .clang-format  CMakeLists.txt  LICENSE  README.md  demo.cpp  demo_exe.cpp  vcpkg.json
Auto/: AddInManagerInfo.hpp  AutoClose.hpp  AutoFree.hpp  AutoOpen.hpp
LibXLL.Demos/: CMakeLists.txt  exeDemo.cpp  xllDemo.cpp
LibXLL.Library/: Auto.hpp  CMakeLists.txt  Commands.hpp  Functional.hpp  Functions.hpp  OpenXLL.hpp  Register.hpp  Types.hpp
LibXLL.Library/Auto/: AddInManagerInfo.hpp  Auto.hpp  AutoAdd.hpp  AutoClose.hpp  AutoFree.hpp  AutoOpen.hpp  AutoRemove.hpp
LibXLL.Library/ExcelSDK/: xlcall.hpp
LibXLL.Library/ExcelSDK/unix/: xlcall.h  xlcall_cpp.h
LibXLL.Library/ExcelSDK/windows/: xlcall.h  xlcall_cpp.h
LibXLL.Library/Functional/: AndThen.hpp  OrElse.hpp  Transform.hpp  TransformError.hpp
LibXLL.Library/Macros/: Defines.hpp
LibXLL.Library/Register/: AddIn.hpp  Arg.hpp  Function.hpp  Registry.hpp
LibXLL.Library/Types/: Array.hpp  Base.hpp  Bool.hpp  Error.hpp  Expected.hpp  Int.hpp  Missing.hpp  MultiRef.hpp  Nil.hpp  Number.hpp  SingleRef.hpp  String.hpp  Variant.hpp
LibXLL.Library/Utils/: Concepts.hpp  Ensure.hpp  Pipe.hpp  Traits.hpp
LibXLL.Library/xlCommands/: Alert.hpp
LibXLL.Library/xlFunctions/: Coerce.hpp  GetName.hpp  GetWorkspace.hpp  Register.hpp
LibXLL.Tests/: Array.cpp  Bool.cpp  CMakeLists.txt  Expected.cpp  Int.cpp  Number.cpp  String.cpp  Variant.cpp
Register/: Arg.hpp  Function.hpp
Types/: Array.hpp  Base.hpp  Bool.hpp  Error.hpp  Int.hpp  Missing.hpp  Nil.hpp  Number.hpp  String.hpp  Variant.hpp
Utils/: MemoryManager.hpp  Traits.hpp
cmake/: CompilerWarnings.cmake
xlCommands/: Alert.hpp
xlFunctions/: Coerce.hpp  GetName.hpp  Register.hpp
